# ARCTERX_Slocum_DataHarvester

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  decodeArgos.py  logHarvest.py  mkCombined.py  pyproject.toml  requirements.txt  syncit  syncit.py
TPWUtils/: GreatCircle.py  INotify.py  Logger.py  README.md  SingleInstance.py  Thread.py  install.py  loadAndExecuteSQL.py
slocum_harvester/: decodeArgos.py  logHarvest.py  mkCombined.py  slocum_utils.py
